[WIP] Integrate Bass build scripts (pt. 2)

--- a/config/grub_configs/desktop/android.cfg
+++ b/config/grub_configs/desktop/android.cfg
@@ -116,24 +116,14 @@ if [ -s ($android)$kdir/install.img ]; then
 	add_entry "Installation" INSTALL=1
 fi
 
-if [ -s ($android)$kdir/install.img ]; then
-	submenu "OEM Install -> " --class forward {
-		add_entry "OEM Install to specified harddisk" OEM_INSTALL=0
-		add_entry "Force OEM Install to detected harddisk" OEM_INSTALL=force
-		add_entry "Force MBR OEM Install to detected harddisk" OEM_INSTALL=mbr
-		add_entry "Force EFI OEM Install to detected harddisk" OEM_INSTALL=efi
-		add_entry "OEM Update" OEM_INSTALL=update
-	}
-fi
-
-add_entry "$live Intel - Desktop Mode" splash=silent,fadein,fadeout logo HWC=drm_minigbm_celadon GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 PC_MODE=1 loglevel=0 console=tty6 quiet splash
-add_entry "$live Intel - Desktop Mode with AOSP DesktopUI on external" splash=silent,fadein,fadeout logo HWC=drm_minigbm_celadon GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 PC_MODE=1 loglevel=0 console=tty6 FORCE_DESKTOP_ON_EXTERNAL=1 quiet splash
-add_entry "$live AMD - Desktop Mode" splash=silent,fadein,fadeout logo HWC=drm_minigbm GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 PC_MODE=1 loglevel=0 console=tty6 quiet splash
-add_entry "$live AMD - Desktop Mode with AOSP DesktopUI on external" splash=silent,fadein,fadeout logo HWC=drm_minigbm GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 PC_MODE=1 loglevel=0 console=tty6 FORCE_DESKTOP_ON_EXTERNAL=1 quiet splash
+add_entry "$live Intel - Desktop Mode" splash=silent,fadein,fadeout logo HWC=drm_minigbm_celadon GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 loglevel=0 console=tty6 quiet splash
+add_entry "$live Intel - Desktop Mode with AOSP DesktopUI on external" splash=silent,fadein,fadeout logo HWC=drm_minigbm_celadon GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 loglevel=0 console=tty6 FORCE_DESKTOP_ON_EXTERNAL=1 quiet splash
+add_entry "$live AMD - Desktop Mode" splash=silent,fadein,fadeout logo HWC=drm_minigbm GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 loglevel=0 console=tty6 quiet splash
+add_entry "$live AMD - Desktop Mode with AOSP DesktopUI on external" splash=silent,fadein,fadeout logo HWC=drm_minigbm GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 loglevel=0 console=tty6 FORCE_DESKTOP_ON_EXTERNAL=1 quiet splash
 
 submenu "Other Options -> " --class forward {
-	add_entry "$live Intel - Debugging Admin" HWC=drm_minigbm_celadon GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 FORCE_USE_ADB_CLIENT_MODE=1 PC_MODE=1 androidboot.bliss.bootmode=admin DEBUG=2
-	add_entry "$live AMD - Debugging Admin" HWC=drm_minigbm GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 FORCE_USE_ADB_CLIENT_MODE=1 PC_MODE=1 androidboot.bliss.bootmode=admin DEBUG=2
+	add_entry "$live Intel - Debugging Admin" HWC=drm_minigbm_celadon GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 FORCE_USE_ADB_CLIENT_MODE=1 androidboot.bliss.bootmode=admin DEBUG=2
+	add_entry "$live AMD - Debugging Admin" HWC=drm_minigbm GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 FORCE_USE_ADB_CLIENT_MODE=1 androidboot.bliss.bootmode=admin DEBUG=2
 	}
 #WINDOWS_ENTRY
 
