--- a/config/grub_configs/desktop/isolinux.cfg
+++ b/config/grub_configs/desktop/isolinux.cfg
@@ -19,56 +19,25 @@ label install
 
 menu separator
 
-menu begin oem
-menu label ^OEM Install options...
-menu title OEM Install options
-
-label oem_install
-	menu label OEM_^Installation - OEM Install to specified harddisk
-	kernel /kernel
-	append initrd=/initrd.img CMDLINE OEM_INSTALL=0 DEBUG= noexec=off
-
-label force_oem_install
-	menu label Force_OEM_^Installation MBR- Force OEM Install to detected harddisk
-	kernel /kernel
-	append initrd=/initrd.img CMDLINE OEM_INSTALL=mbr DEBUG= noexec=off
-
-label force_oem_install_mbr
-	menu label Force_OEM_^Installation EFI - Force OEM Install to detected harddisk
-	kernel /kernel
-	append initrd=/initrd.img CMDLINE OEM_INSTALL=efi DEBUG= noexec=off
-
-label force_oem_install_efi
-	menu label Force_OEM_^Installation - Force OEM Install to detected harddisk
-	kernel /kernel
-	append initrd=/initrd.img CMDLINE OEM_INSTALL=force DEBUG= noexec=off
-
-label oem_update
-	menu label OEM_^Update - OEM update OS_TITLE
-	kernel /kernel
-	append initrd=/initrd.img CMDLINE OEM_INSTALL=update DEBUG= noexec=off
-
-menu end
-
 label livem
 	menu label Intel - ^Run OS_TITLE in desktop mode
 	kernel /kernel
-	append initrd=/initrd.img CMDLINE splash=silent,fadein,fadeout logo HWC=drm_minigbm_celadon GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 PC_MODE=1 loglevel=0 console=tty6 quiet splash SRC= DATA=
+	append initrd=/initrd.img CMDLINE splash=silent,fadein,fadeout logo HWC=drm_minigbm_celadon GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 loglevel=0 console=tty6 quiet splash SRC= DATA=
 
 label livem
 	menu label Intel - ^Run OS_TITLE in desktop mode with AOSP DesktopUI on external
 	kernel /kernel
-	append initrd=/initrd.img CMDLINE splash=silent,fadein,fadeout logo HWC=drm_minigbm_celadon GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 PC_MODE=1 loglevel=0 console=tty6 FORCE_DESKTOP_ON_EXTERNAL=1 quiet splash SRC= DATA=
+	append initrd=/initrd.img CMDLINE splash=silent,fadein,fadeout logo HWC=drm_minigbm_celadon GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 loglevel=0 console=tty6 FORCE_DESKTOP_ON_EXTERNAL=1 quiet splash SRC= DATA=
 
 label livem_amd
 	menu label Intel - ^Run OS_TITLE in desktop mode
 	kernel /kernel
-	append initrd=/initrd.img CMDLINE splash=silent,fadein,fadeout logo HWC=drm_minigbm GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 PC_MODE=1 loglevel=0 console=tty6 quiet splash SRC= DATA=
+	append initrd=/initrd.img CMDLINE splash=silent,fadein,fadeout logo HWC=drm_minigbm GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 loglevel=0 console=tty6 quiet splash SRC= DATA=
 
 label livem_amd
 	menu label Intel - ^Run OS_TITLE in desktop mode with AOSP DesktopUI on external
 	kernel /kernel
-	append initrd=/initrd.img CMDLINE splash=silent,fadein,fadeout logo HWC=drm_minigbm GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 PC_MODE=1 loglevel=0 console=tty6 FORCE_DESKTOP_ON_EXTERNAL=1 quiet splash SRC= DATA=
+	append initrd=/initrd.img CMDLINE splash=silent,fadein,fadeout logo HWC=drm_minigbm GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 loglevel=0 console=tty6 FORCE_DESKTOP_ON_EXTERNAL=1 quiet splash SRC= DATA=
 
 menu separator
 menu begin admin_options
@@ -78,12 +47,12 @@ menu title Admin options
 label livem_debugging
 	menu label Intel - Admin Debugging - ^Run OS_TITLE in debugging desktop mode
 	kernel /kernel
-	append initrd=/initrd.img CMDLINE DEBUG=2 splash=silent,fadein,fadeout logo HWC=drm_minigbm_celadon GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 PC_MODE=1 loglevel=0 console=tty6 quiet splash SRC= DATA=
+	append initrd=/initrd.img CMDLINE DEBUG=2 splash=silent,fadein,fadeout logo HWC=drm_minigbm_celadon GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 loglevel=0 console=tty6 quiet splash SRC= DATA=
 
 label livem_amd_debugging
 	menu label AMD - Admin Debugging - ^Run OS_TITLE in debugging desktop mode
 	kernel /kernel
-	append initrd=/initrd.img CMDLINE DEBUG=2 splash=silent,fadein,fadeout logo HWC=drm_minigbm GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 PC_MODE=1 loglevel=0 console=tty6 quiet splash SRC= DATA=
+	append initrd=/initrd.img CMDLINE DEBUG=2 splash=silent,fadein,fadeout logo HWC=drm_minigbm GRALLOC=minigbm FFMPEG_OMX_CODEC=1 FFMPEG_CODEC2_PREFER=1 loglevel=0 console=tty6 quiet splash SRC= DATA=
 
 menu end
 
